# Duckie

./: CMakeLists.txt  COLOR_DETECTION_IMPROVEMENTS.md  DOCKER_COMMANDS.md  ERROR_ANALYSIS_REPORT.md  MULTI_COLOR_DETECTION_GUIDE.md  OBJECT_FOLLOWING_FINAL_FIXES.md  OBJECT_FOLLOWING_NODE_FIXES.md  README.md  debug_detection.py  diagnostic_tool.py  docker_setup_duckie.sh  error_recovery.sh  fix_permissions.sh  package.xml  setup.sh  test_colors.py
config/: autonomous_config.yaml
launch/: autonomous_following.launch
src/: autonomous_controller_node.py  color_object_detection_node.py  object_following_node.py  obstacle_detection_node.py
